--- a/.github/workflows/update-feed.yml
+++ b/.github/workflows/update-feed.yml
@@ -1,32 +1,42 @@
-name: Update Feed and Cars JSON
+name: Update Feed and Car Detail
 
 on:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches:
+      - main
   schedule:
-    - cron: '0 3 * * *' # รัน auto ตี 3 ทุกวัน (เวลาประเทศไทย = 10:00)
+    - cron: '0 * * * *'
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Set up job
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
+
       - name: Install requirements
-        run: pip install requests
+        run: |
+          pip install -r requirements.txt
+
       - name: Update cars.json
-        run: python update_cars_json.py
+        run: python fetch_api_to_json.py
+
       - name: Generate car-detail HTML
         run: python generate_car_detail.py
+
       - name: Generate feed.xml
-        run: python make_feed.py
+        run: python generate_feed.py
+
       - name: Commit & Push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Actions"
           git add .
-          git commit -m "Update cars and feed auto"
+          git commit -m "auto update cars and feed" || true
           git push
